# Nithirium

./: README.md
.github/workflows/: build.yml
NithiriumAgent/: build.gradle.kts  settings.gradle.kts
NithiriumAgent/src/main/java/com/nithirium/agent/: NithiriumAgent.java  NithiriumBridge.java  NithiriumTransformer.java
NithiriumCore/: CMakeLists.txt
NithiriumCore/src/main/cpp/: nithirium_core.cpp
NithiriumCore/src/main/cpp/jni/: com_nithirium_agent_NithiriumBridge.cpp
NithiriumCore/src/main/public/: shared_memory.h
